# adsdb

./: .gitignore  .travis.yml  README.md  codecov.yml  download-data.sh  local-install.sh  model.py  pipeline.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
landing/: filesystem.py  landing.py  webresource.py
src/zones/: config.ini  config.py  pipeline.py  utils.py
src/zones/exploitation/: exploit.py
src/zones/formatted/: formatter.py
src/zones/landing/: datasource.py  fileresource.py  landing.py  webresource.py
src/zones/trusted/: cleaner.py  processes.py
tests/: config.ini  conftest.py  test_formatted.py  test_landing.py
tests/config/: formatted.ini  landing.ini
zones/: config.ini  pipeline.py
zones/landing/: datasource.py  file.py  fileresource.py  landing.py  webresource.py
