[metadata]
name = zones
description = Data management backbone zones for the ADSDB EtE project
long_description = file: README.md
author = Christos K. Matzoros, Mikel Solabarrieta
author_email = "matzoros.christos@estudiantat.upc.edu, mikel.solabarrieta@estudiantat.upc.edu"
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
#    Programming Language :: Python :: 3.8
#    Programming Language :: Python :: 3.9

[options]
packages =
    zones
    zones.landing
    zones.formatted
    zones.trusted
    zones.explotation
install_requires =
    duckdb>=0.3
    numpy>=1.22
    pandas>=1.1
    pandas-profiling>=3.1
    psycopg2>=2.9
    pymongo>=4.0
    redis>=4.1
    scipy>=1.3
    SQLAlchemy>=1.4
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
test =
    black>=21.9b0
    coverage>=6.2
    flake8>=4.0.1
    mypy>=0.930
    pytest>=6.2.5
    pytest-cov>=3.0.0
    tox>=3.24.5

[options.package_data]
zones = py.typed

[flake8]
max-line-length = 120